tests/integration/owned_abstractions/owned_struct_error.june
// error: public field is a shared pointer

struct Stats {
    age: i64
}

struct Foo {
    stats: Stats
}

fun main() {
    let foo = new owned Foo(stats: new Stats(age: 88))
}